--- a/public/asset/css/style.css
+++ b/public/asset/css/style.css
@@ -69,9 +69,21 @@ span {
 }
 
 .img-fluid {
-  height: 60px;
+  height: 160px;
   margin-bottom: 30px;
-  width: 60px;
+  width: 160px;
+}
+
+.img-start {
+    height: 250px;
+    margin-bottom: 30px;
+    width: 250px;
+  }
+
+.img-about {
+    height: 200px;
+    margin-bottom: 30px;
+    width: 300px;
 }
 
 .container-full {
