--- a/public/asset/css/medium.css
+++ b/public/asset/css/medium.css
@@ -13,6 +13,17 @@ body {
 a {
 	color:#00ab6b;
 }
+.w3-tag {
+    background-color:#000;
+    color:#fff;display:inline-block;
+    padding-left:8px;
+    padding-right:8px;
+    text-align:center;
+}
+.w3-blue,.w3-hover-blue:hover {
+    color:#fff!important;
+    background-color:#2196F3!important
+}
 a,a:hover {
 	transition:all 0.2s;
 }
@@ -145,7 +156,7 @@ span.post-date,span.post-read {
 span.post-read-more {
 	align-items:center;
 	display:inline-block;
-	float:right;
+	float: right;
 	margin-top:8px;
 }
 span.post-read-more a {
@@ -440,4 +451,42 @@ ul.tags li a:hover {
 	line-height:22px;
 	border-radius:50%;
 	font-size:12px;
+}
+.comment {
+    margin-bottom: 45px;
+}
+.author-image {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    float: left;
+}
+.author-name {
+    float: left;
+    margin-left: 15px;
+}
+.author-name>h4 {
+    margin: 5px 0px;
+}
+.author-time {
+    font-size: 11px;
+    font-style: italic;
+    color: #aaa;
+}
+.comment-content {
+    clear: both;
+    margin-left: 65px;
+    font-size: 16px;
+    line-height: 1.3em;
+}
+.comment-title {
+    margin-bottom: 45px;
+}
+.comment-title>span {
+    margin-right: 15px;
+}
+.author-button {
+    font-size: 11px;
+    color: #aaa;
+    margin-top: 15px;
 }
